--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>RPS</title>
 </head>
 <body>
+    <div class="main">
+        <div class="btn rock" data-value="rock"><i class="fa-solid fa-hand-back-fist fa-7x"></i></div>
+        <div class="btn paper" data-value="paper"><i class="fa-solid fa-hand fa-7x"></i></div>
+        <div class="btn scissors" data-value="scissors"><i class="fa-solid fa-hand-scissors fa-7x"></i></div>
+    </div>
+    <div class="result">
+        Computer   <span class="computer">0</span>
+        <span>-</span>
+        <span class="human">0</span>   Player1<br>
+        <span class="draw"></span>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
